# surrealkv

./: .gitignore  .rustfmt.toml  @  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  dhat-heap.json  levels  release.toml
.github/workflows/: bench.yml  ci.yml  crates.yml  release.yml
benches/: alloc_bench.rs  bplustree_bench.rs  collection_bench.rs  common.rs  compare_stores_bench.rs  fd.rs  file_bench.rs  file_readers.rs  io_bench.rs  load_bench.rs  mmap_bench.rs  oracle_hash_bench.rs  s3fifo_bench.rs  scan_bench.rs  sdb_bench.rs  store_bench.rs
benches/sdb_benches/: mod.rs
benches/sdb_benches/lib/: mod.rs
benches/sdb_benches/lib/routines/: create.rs  mod.rs
cli/: Cargo.toml  README.md
cli/src/: analyzer.rs  commands.rs  main.rs  mod.rs
docs/: ARCHITECTURE.md
examples/: hit_ratio.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: block_iterator.rs  block_prefix.rs  block_restart_boundary.rs  block_roundtrip.rs  bloom_filter.rs  bplustree.rs  index_lookup.rs  index_roundtrip.rs  mod.rs  store_bidir_iter.rs  store_ops.rs  table_iterator.rs  table_latest.rs  table_mvcc.rs  table_range.rs  table_roundtrip.rs  table_seek.rs
src/: active_txn_tracker.rs  async_runtime.rs  batch.rs  blob.rs  cache.rs  checkpoint.rs  clock.rs  commit.rs  compaction.rs  comparator.rs  compression.rs  discard.rs  entry.rs  error.rs  indexer.rs  iter.rs  lib.rs  lockfile.rs  lsm.rs  manifest.rs  meta.rs  mod.rs  option.rs  oracle.rs  paths.rs  range_debug_test.rs  reader.rs  repair.rs  snapshot.rs  spawn.rs  stall.rs  stats.rs  store.rs  tablestore.rs  task.rs  tracker.rs  transaction.rs  util.rs  versioned_iter.rs  vfs.rs  (+2 more)
src/async_runtime/: mod.rs  spawning.rs  tokio.rs
src/bench/: store_bench.rs
src/bplustree/: mod.rs  storage.rs  tree.rs
src/bptree/: mod.rs  storage.rs  tree.rs
src/compaction/: compactor.rs  leveled.rs  mod.rs
src/levels/: iter.rs  level.rs  level_iterator.rs  mod.rs
src/log/: aol.rs  fd.rs  mod.rs
src/memtable/: arena.rs  mod.rs  skiplist.rs
src/sstable/: block.rs  bloom.rs  error.rs  filter_block.rs  index_block.rs  meta.rs  mod.rs  prefetch.rs  sst_id.rs  table.rs  two_level_iter.rs
src/storage/: mod.rs
src/storage/aol/: aol.rs  mod.rs  segment.rs
src/storage/cache/: mod.rs  queue.rs  s3fifo.rs
src/storage/index/: art.rs  iter.rs  mod.rs  node.rs  snapshot.rs
src/storage/kv/: compaction.rs  entry.rs  error.rs  indexer.rs  manifest.rs  meta.rs  mod.rs  option.rs  oracle.rs  reader.rs  repair.rs  rollback.rs  snapshot.rs  stats.rs  store.rs  transaction.rs  util.rs  watcher.rs
src/storage/log/: aol.rs  fd.rs  mod.rs
src/storage/log/aof/: log.rs  mod.rs  reader.rs
src/storage/log/aol/: aol.rs  mod.rs
src/storage/log/wal/: log.rs  mod.rs  reader.rs  wal.rs
src/storage/wal/: mod.rs  reader.rs  segment.rs  wal.rs
src/test/: atomic_memtable_tests.rs  batch_tests.rs  block_tests.rs  bplustree_migration_test.rs  compaction_tests.rs  compression_tests.rs  index_block_tests.rs  iterator_tests.rs  level_tests.rs  lsm_tests.rs  manifest_tests.rs  memtable_tests.rs  mod.rs  oracle_tests.rs  recovery_integration_tests.rs  recovery_test_helpers.rs  recovery_tests.rs  snapshot_tests.rs  sstable_tests.rs  stall_tests.rs  store_tests.rs  transaction_tests.rs  version_iterator_tests.rs  versioned_iterator_tests.rs  vlog_tests.rs  wal_tests.rs
src/wal/: cleanup.rs  file_writer.rs  format.rs  manager.rs  metadata.rs  mod.rs  reader.rs  recovery.rs  recovery_comprehensive_tests.rs  segment.rs  test_helpers.rs  tests.rs  writer.rs
