[workspace]
members = [
    ".",   # Main surrealkv library
    "cli", # CLI tool
]

[package]
name = "surrealkv"
publish = true
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A low-level, versioned, embedded, ACID-compliant, key-value database for Rust"
repository = "https://github.com/surrealdb/surrealkv"
homepage = "https://github.com/surrealdb/surrealkv"
documentation = "https://docs.rs/surrealkv/"
keywords = ["lmdb", "rocksdb", "sled", "redb", "tikv"]
categories = ["database-implementations", "concurrency", "data-structures"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
crc32fast = "1.3.2"
chrono = "0.4.31"
parking_lot = "0.12.1"
lru = "0.12.0"
bytes = "1.5.0"
quick_cache = "0.6.0"
vart = "0.9.0"
revision = "0.10.0"
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
tempdir = "0.3"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
mimalloc = { version = "0.1.39", default-features = false }
num_cpus = "1.16.0"
walkdir = "2.5.0"
dashmap = "6.1.0"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "load_bench"
harness = false


[[bench]]
name = "file_readers"
harness = false
