[package]
name = "surrealkv"
publish = true
version = "0.10.1"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A low-level, versioned, embedded, ACID-compliant, key-value database for Rust"
repository = "https://github.com/surrealdb/surrealkv"
homepage = "https://github.com/surrealdb/surrealkv"
documentation = "https://docs.rs/surrealkv/"
keywords = ["lmdb", "rocksdb", "sled", "redb", "tikv"]
categories = ["database-implementations", "concurrency", "data-structures"]
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = "4.0.0"
snap = "1.0.0"
crc32fast = "1.2.1"
quick_cache = "0.6.0"
parking_lot = "0.12.1"
bytes = "1.5.0"
bit-vec = "0.8.0"
byteorder = "1.5.0"
rand = "0.8.4"
crossbeam = "0.8.0"
crossbeam-skiplist = "0.1.3"
double-ended-peekable = "0.1.0"
ahash = "0.8.11"
async-channel = "2.1.1"
tokio = { version = "1.36", features = ["rt", "sync", "macros", "time"] }
sha2 = "0.10.8"
futures = "0.3.30"
async-trait = "0.1.82"
chrono = "0.4.31"
guardian = "1.3.0"
scopeguard = "1.2.0"
memmap2 = "0.9.5"
interval-heap = "0.0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
tempdir = "0.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
tokio = { version = "1.39.2", features = ["full"] }
tempfile = "3.10.1"
fastrand = "2.0.1"
divan = "0.1.14"
