[package]
name = "skv-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tools for SurrealKV"
# Use the same license, authors etc. as your main package

[[bin]]
name = "skv-cli"
path = "src/main.rs"

[dependencies]
surrealkv = { path = ".." }  # Reference the main library
clap = { version = "4.5.21", features = ["derive"] }
indicatif = "0.17.9"
humansize = "2.1.3"
serde_json = "1.0"
anyhow = "1.0"
bytes = "1.5.0"
