[package]
name = "surrealkv-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
surrealkv = { path = ".." }
tempfile = "3.23"
rand = "0.9"
rand_chacha = "0.9"
tokio = { version = "1", features = ["rt", "sync"] }

[[bin]]
name = "block_roundtrip"
path = "fuzz_targets/block_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "block_prefix"
path = "fuzz_targets/block_prefix.rs"
test = false
doc = false
bench = false

[[bin]]
name = "block_restart_boundary"
path = "fuzz_targets/block_restart_boundary.rs"
test = false
doc = false
bench = false


[[bin]]
name = "block_iterator"
path = "fuzz_targets/block_iterator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "index_lookup"
path = "fuzz_targets/index_lookup.rs"
test = false
doc = false
bench = false

[[bin]]
name = "index_roundtrip"
path = "fuzz_targets/index_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "table_roundtrip"
path = "fuzz_targets/table_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "table_seek"
path = "fuzz_targets/table_seek.rs"
test = false
doc = false
bench = false

[[bin]]
name = "table_mvcc"
path = "fuzz_targets/table_mvcc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "table_range"
path = "fuzz_targets/table_range.rs"
test = false
doc = false
bench = false


[[bin]]
name = "bloom_filter"
path = "fuzz_targets/bloom_filter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bplustree"
path = "fuzz_targets/bplustree.rs"
test = false
doc = false
bench = false

[[bin]]
name = "store_ops"
path = "fuzz_targets/store_ops.rs"
test = false
doc = false
bench = false